        PR c++/33239         * pt.c (resolve_typename_type): Don't look things up in the original         template if it would mean losing template arguments.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128725 138bc75d-0d04-0410-961f-82ee72b054a4